<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg"
    tools:context="com.rf.hp.normaluniversitystu.activity.LoginActivity">

    <ImageView
        android:src="@mipmap/logo"
        android:layout_marginTop="@dimen/dimen_iat_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_margin="@dimen/dimen_mine_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/tv_login_name"
            android:src="@mipmap/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       <EditText
           android:id="@+id/et_login_username"
           android:layout_marginLeft="@dimen/text_margin"
           android:inputType="text"
           android:hint="@string/str_login_input_Id"
           android:background="@color/trans"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:background="@color/color_view_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <LinearLayout
            android:background="@color/white"
            android:layout_margin="@dimen/dimen_mine_padding"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tv_login_pwd"
                android:src="@mipmap/locked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_marginLeft="@dimen/text_margin"
                android:hint="@string/str_login_input_pwd"
                android:inputType="textPassword"
                android:background="@color/trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:background="@color/color_view_color"
            android:layout_width="match_parent"
            android:layout_height="1px" />

        <Button
            android:id="@+id/la_btn_login"
            android:background="@drawable/shape_btn_login"
            android:layout_margin="@dimen/dimen_login_btn"
            android:text="@string/str_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_forgetpwd"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:textColor="@color/allback"
            android:text="@string/str_login_forgetpwd"
            android:drawableRight="@mipmap/ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_info"
            android:layout_marginTop="@dimen/dimen_aa_right_iv"
            android:layout_gravity="center"
            android:text="@string/str_login_software_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</LinearLayout>
