<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rf.hp.normaluniversitystu.activity.mine.ChangePwdActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/changPwd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/allback"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/str_mine_changePwd"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_login_btn"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="#FBFBFB"
                android:layout_height="50dp">

                <TextView
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:text="@string/str_mine_changePwd_old_pwd"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_oldPwd"
                    android:background="#FBFBFB"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:inputType="textPassword"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_view_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:background="#FBFBFB"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/str_mine_changePwd_new_pwd"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_newPwd"
                    android:background="#FBFBFB"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:inputType="textPassword"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_view_line" />
            <LinearLayout
                android:orientation="horizontal"
                android:background="#FBFBFB"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/str_mine_changePwd_ok_pwd"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_affinePwd"
                    android:background="#FBFBFB"
                    android:layout_gravity="center"
                    android:layout_marginLeft="28px"
                    android:inputType="textPassword"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_view_line" />
            <Button
                android:id="@+id/btn_affinePwd"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/str_mine_ok_change_pwd"
                android:textColor="#ffffff"
                android:background="@color/allback"
                android:layout_margin="@dimen/dimen_login_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
