<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rf.hp.normaluniversitystu.activity.mine.MineInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toobar_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/allback"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/str_mine_mineinformation"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#edeff1"/>
            <RelativeLayout
                android:id="@+id/rl_change_head"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <com.rf.hp.normaluniversitystu.utils.CircleImageView
                    android:id="@+id/iv_userHeader"
                    android:src="@mipmap/woman"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/dimen_mine_padding"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/tv_changeHeader"
                    android:text="修改头像"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp" />
            </RelativeLayout>
            <LinearLayout
                android:padding="10dp"
                android:background="#edeff1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="基础信息"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_mine_info_name"
                    android:textColor="#10A7BA"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:text="王小小"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dddddd" />
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_mine_info_no"
                    android:textColor="#10A7BA"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_userNo"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:text="123456789"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dddddd" />
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_mine_info_phone"
                    android:textColor="#10A7BA"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_userPhone"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:text="123456789"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dddddd" />
            <LinearLayout
                android:id="@+id/ll_last_menses"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_mine_info_dept"
                    android:textColor="#10A7BA"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_userDept"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:text=""
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dddddd" />
            <LinearLayout
                android:id="@+id/ll_huaiyun_time"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_mine_info_class"
                    android:textColor="#10A7BA"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_user_class"
                    android:layout_gravity="center"
                    android:layout_marginLeft="44dp"
                    android:text=""
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dddddd" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
